Move tips into retro window

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="window-body font-serif p-4">
+    <h3 class="text-lg font-semibold mt-2">What We Do</h3>
+    <ul class="text-md list-disc list-inside mb-4">
+      <li>Showcase the achievements of women in tech in timeline.</li>
+      <li>Provide valuable tech tips to empower women in their careers.</li>
+      <li>Bridge the mentorship gap by connecting mentees with experienced mentors.</li>
+    </ul>
     <!-- Team Members Section -->
     <div class="max-w-4xl mx-auto mt-5 mb-3">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
