--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,16 +14,27 @@
             <img src="{% static 'images/clippy.webp' %}" alt="Clippy Microsoft Office Assistant" class="w-auto mx-auto p-4">
 
             <h1 class="text-xl font-bold mb-4">404: Gender Gap Not Found - Inspiring Women in Tech</h1>
-
-        <p class="text-lg">
-          Our web app is designed to inspire the next generation of tech innovators by sharing the stories of women pioneers in technology. We aim to break barriers, close gender gaps, and build a diverse and inclusive tech community.
-        </p>
-        <h3 class="text-xl font-semibold mt-2">What We Do</h3>
-        <ul class="list-disc list-inside mb-4">
-          <li>Showcase the achievements of women in tech in timeline.</li>
-          <li>Provide valuable tech tips to empower women in their careers.</li>
-          <li>Bridge the mentorship gap by connecting mentees with experienced mentors.</li>
-        </ul>
+        <div class="window mx-auto max-w-3xl mt-5">
+            <div class="title-bar">
+              <div class="title-bar-text">Tips for Getting into Tech</div>
+              <div class="title-bar-controls">
+                <button aria-label="Minimize"></button>
+                <button aria-label="Maximize"></button>
+                <button aria-label="Close"></button>
+              </div>
+            </div>
+            <div class="window-body font-serif p-4">
+                <ul class="list-disc list-inside mb-4">
+                    <li>Start with the basics and understand core concepts.</li>
+                    <li>Practice consistently by building small projects.</li>
+                    <li>Learn how to debug and troubleshoot your code.</li>
+                    <li>Explore online resources like tutorials, forums and documentation.</li>
+                    <li>Collaborate with others to share knowledge and learn together.</li>
+                    <li>Stay updated with the latest trends and technologies in the industry.</li>
+                    <li>Don't be afraid to ask questions and seek help when stuck.</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <!-- Right column with timeline content -->
