Update clippy on index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,9 +11,11 @@
     <!-- Left column content -->
     <div class="md:w-1/2">
         {% load static %}
-            <img src="{% static 'images/clippy.webp' %}" alt="Clippy Microsoft Office Assistant" class="w-auto mx-auto p-4">
-
-            <h1 class="text-xl font-bold mb-4">404: Gender Gap Not Found - Inspiring Women in Tech</h1>
+        <h1 class="text-xl font-bold mb-4">Welcome to 404: Gender Gap Not Found!</h1>
+        <p class="text-xl mb-4">Looks like you want to start a career in tech?</p>
+        <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fmedia.tenor.com%2F7nbpMQwEGC8AAAAM%2Fclippy-microsoft.gif" alt="Clippy Microsoft Office Assistant" class="mx-auto mt-6">
+        
+            
         <div class="window mx-auto max-w-3xl mt-5">
             <div class="title-bar">
               <div class="title-bar-text">Tips for Getting into Tech</div>
