spacing team page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="window-body font-serif p-4">
-    <h3 class="text-lg font-semibold mt-2">What We Do</h3>
+    <h3 class="text-lg font-semibold mt-2 mb-3">What We Do</h3>
     <ul class="text-md list-disc list-inside mb-4">
       <li>Showcase the achievements of women in tech in timeline.</li>
       <li>Provide valuable tech tips to empower women in their careers.</li>
