Fix LinkedIn link in about.html

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -45,7 +45,7 @@
                         GitHub
                     </a>
                 <!-- Linkedin Link -->
-                    <a href=" {{ member.linkedin }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
+                    <a href=" {{ member.linkedIn }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
                         LinkedIn
                     </a>
                 </p>
