updated html across most apps

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -26,7 +26,7 @@
       <li>Bridge the mentorship gap by connecting mentees with experienced mentors.</li>
     </ul>
     <!-- Team Members Section -->
-    <div class="max-w-4xl mx-auto mt-5 mb-3">
+    <div class="max-w-4xl mx-auto font-mono mt-5 mb-3">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
             {% for member in members %}
             <div class="bg-white border-2 border-black p-4">
@@ -41,11 +41,11 @@
                 <!-- GitHub Link -->
                 {% if member.github %}
                 <p class="mt-5 flex justify-between">
-                    <a href="{{ member.github }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
+                    <a href="{{ member.github }}" target="_blank" class="w-2/5 pr-3 pl-7 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
                         GitHub
                     </a>
                 <!-- Linkedin Link -->
-                    <a href=" {{ member.linkedIn }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
+                    <a href=" {{ member.linkedIn }}" target="_blank" class="w-2/5 pr-4 pl-5 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
                         LinkedIn
                     </a>
                 </p>
