--- a/mentors/templates/mentors/contact_form.html
+++ b/mentors/templates/mentors/contact_form.html
@@ -15,11 +15,11 @@
                     <button aria-label="Close"></button>
                 </div>
             </div>
-            <div class="window-body p-4">
+            <div class="window-body font-mono p-4">
                 <form method="post" class="p-4">
                     {% csrf_token %}
 
-                    <div class="field-row-stacked mb-4">
+                    <div class="field-row-stacked mb-4 font-bold font-mono tracking-wide">
                         <label for="{{ form.mentor_name.id_for_label }}">Mentor Name (optional):</label>
                         {{ form.mentor_name }}
                         {% if form.mentor_name.errors %}
@@ -27,10 +27,10 @@
                                 {{ form.mentor_name.errors }}
                             </div>
                         {% endif %}
-                        <small class="text-gray-600">Leave blank to be matched with any available mentor</small>
+                        <small class="text-black-600">Leave blank to be matched with any available mentor</small>
                     </div>
 
-                    <div class="field-row-stacked mb-4">
+                    <div class="field-row-stacked mb-4 font-bold font-mono tracking-wide">
                         <label for="{{ form.email.id_for_label }}">Your Email:</label>
                         {{ form.email }}
                         {% if form.email.errors %}
@@ -40,7 +40,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="field-row-stacked mb-4">
+                    <div class="field-row-stacked mb-4 font-bold font-mono tracking-wide">
                         <label for="{{ form.message.id_for_label }}">Your Message:</label>
                         {{ form.message }}
                         {% if form.message.errors %}
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="field-row justify-end">
-                        <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-300">
+                        <button type="submit" class="px-4 py-2 font-bold font-mono tracking-widest border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300">
                             Submit Request
                         </button>
                     </div>
