Update team member details and remove trailing slashes for HTML validation

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="https://unpkg.com/98.css/dist/98.css" />
+<link rel="stylesheet" href="https://unpkg.com/98.css/dist/98.css">
 
 <div class="window mx-auto max-w-3xl mt-5">
   <div class="title-bar">
