--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -23,7 +23,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
         {% endif %}
         <div class="field-row" style="justify-content: space-between;">
           <button class="btn" type="submit">{% trans "Sign In" %}</button>
