--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -21,7 +21,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
         {% endif %}
         <div class="field-row">
           <button class="btn" type="submit">{% trans "Sign Up" %}</button>
