--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <title>{% block title %}Hackathon{% endblock %}</title>
   {% tailwind_css %}
   <!-- Retro Windows 98 CSS for a nostalgic vibe -->
-  <link rel="stylesheet" href="https://unpkg.com/98.css/dist/98.css" />
+  <link rel="stylesheet" href="https://unpkg.com/98.css/dist/98.css">
   {% block extra_css %}{% endblock %}
 </head>
 <body class="bg-stone-300/80 min-h-screen flex flex-col font-serif {% if user.is_authenticated %}user-logged-in{% endif %}">
