--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <hr class="bg-black"/>
+        <hr class="bg-black">
     </li>
     {% endfor %}
 </ul>
