--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -14,12 +14,12 @@
         <button aria-label="Close"></button>
       </div>
     </div>
-    <div class="window-body">
+    <div class="window-body font-mono text-base">
       <form method="POST" action="{% url 'account_change_password' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <div class="field-row">
-          <button class="btn" type="submit">{% trans 'Change Password' %}</button>
+          <button class="px-4 py-2 mt-2 font-mono text-lg border-2 border-black bg-white text-black tracking-widest font-bold hover:bg-blue-800 hover:text-white transition duration-300" type="submit">{% trans 'Change Password' %}</button>
         </div>
       </form>
     </div>
