--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -14,7 +14,7 @@
         <button aria-label="Close"></button>
       </div>
     </div>
-    <div class="window-body">
+    <div class="window-body font-mono text-base">
       <p class="mb-3">{% trans 'Are you sure you want to sign out?' %}</p>
 
       <form method="post" action="{% url 'account_logout' %}">
@@ -23,7 +23,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
         {% endif %}
         <div class="field-row">
-          <button class="btn" type="submit">{% trans 'Sign Out' %}</button>
+          <button class="px-4 py-2 mt-2 font-mono text-lg border-2 border-black bg-white text-black tracking-widest font-bold hover:bg-blue-800 hover:text-white transition duration-300" type="submit">{% trans 'Sign Out' %}</button>
         </div>
       </form>
     </div>
