add !important to CSS properties for better specificity

--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -9,6 +9,6 @@
     to right,
     var(--primary-color),
     var(--secondary-color)
-  );
-  color: var(--text-color);
+  ) !important;
+  color: var(--text-color) !important;
 }
