--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -18,7 +18,7 @@
       <button aria-label="Close"></button>
     </div>
   </div>
-  <div class="window-body font-serif p-4">
+  <div class="window-body font-mono text-base p-4">
     <h3 class="text-lg font-semibold mt-2 mb-3">What We Do</h3>
     <ul class="text-md list-disc list-inside mb-4">
       <li>Showcase the achievements of women in tech in timeline.</li>
