honor system buttons

--- a/timeline/templates/timeline/honour.html
+++ b/timeline/templates/timeline/honour.html
@@ -39,7 +39,7 @@
                     {% else %}
                     <span class="icon-[tabler--heart] size-5 text-gray-500"></span>
                     {% endif %}
-                    <span class="honour-count ml-1 text-black">{{ event.honour_count }}</span>
+                    <span class="honour-count ml-1 text-black text-bold font-mono">{{ event.honour_count }}</span>
                 </button>
             </div>
         </div>
