--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -65,16 +65,16 @@
                     {% else %}
                     <span class="icon-[tabler--heart] size-5"></span>
                     {% endif %}
-                    <span class="honour-count">{{ event.honour_count }}</span>
+                    <span class="honour-count text-black text-bold font-mono">{{ event.honour_count }}</span>
                 </button>
             </div>
-        {% else %}
-            <div class="mt-3 flex items-center text-sm text-black">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z">
-                </svg>
-                <span>{{ event.honour_count }}</span>
-            </div>
+            {% else %}
+                <div class="mt-3 flex items-center text-sm text-black">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z">
+                    </svg>
+                <span class="px-1 font-bold text-base">{{ event.honour_count }}</span>
+                </div>
         {% endif %}
         </li>
         {% empty %}
