--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -50,9 +50,9 @@
                             {% if event.user_has_honoured %}
                             <span class="icon-[tabler--heart-filled] size-5 text-red-500"></span>
                             {% else %}
-                            <span class="icon-[tabler--heart] size-5 text-gray-500"></span>
+                            <span class="icon-[tabler--heart] size-5 text-black"></span>
                             {% endif %}
-                            <span class="honour-count ml-1 text-black">{{ event.honour_count }}</span>
+                            <span class="honour-count ml-1 text-black text-bold font-mono">{{ event.honour_count }}</span>
                         </button>
                     </div>
                 </div>
