--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -53,29 +53,30 @@
                 {% endif %}
             </div>
 
-            <!-- Honour button -->
             {% if user.is_authenticated %}
-            <div class="honour-container flex items-center space-x-2 mt-4">
-                <button
-                    class="honour-btn flex items-center space-x-1 text-sm {% if event.user_has_honoured %}honoured text-red-500{% else %}text-gray-500{% endif %}"
-                    data-timeline-id="{{ event.id }}">
-                    <!-- Heart icon: filled if honoured -->
-                    {% if event.user_has_honoured %}
-                    <span class="icon-[tabler--heart-filled] size-5"></span>
-                    {% else %}
-                    <span class="icon-[tabler--heart] size-5"></span>
-                    {% endif %}
-                    <span class="honour-count text-black text-bold font-mono">{{ event.honour_count }}</span>
-                </button>
-            </div>
-            {% else %}
-                <div class="mt-3 flex items-center text-sm text-black">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z">
-                    </svg>
-                <span class="px-1 font-bold text-base">{{ event.honour_count }}</span>
-                </div>
+<!-- Honour button for logged-in users -->
+<div class="honour-container flex items-center space-x-2 mt-4">
+    <button class="honour-btn flex items-center space-x-1 text-sm"
+            data-timeline-id="{{ event.id }}"
+            data-honour-count="{{ event.honour_count }}">
+        <!-- Heart icon: filled if honoured, outline if not -->
+        {% if event.user_has_honoured %}
+        <span class="icon-[tabler--heart-filled] size-5 text-red-500"></span>
+        {% else %}
+        <span class="icon-[tabler--heart] size-5 text-gray-500"></span>
         {% endif %}
+        <span class="honour-count ml-1 text-black text-bold font-mono">{{ event.honour_count }}</span>
+    </button>
+</div>
+{% else %}
+<!-- Honour display for non-logged-in users -->
+<div class="honour-container flex items-center space-x-2 mt-4">
+    <div class="flex items-center space-x-1 text-sm">
+        <span class="icon-[tabler--heart] size-5 text-gray-500"></span>
+        <span class="honour-count ml-1 text-black text-bold font-mono">{{ event.honour_count }}</span>
+    </div>
+</div>
+{% endif %}
         </li>
         {% empty %}
         <li>No events found in the timeline.</li>
