--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/account.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/account.css' %}">
 {% endblock %}
