--- a/templates/base.html
+++ b/templates/base.html
@@ -58,17 +58,17 @@
 
         <!-- Dropdown menu -->
         <div id="navbar-dropdown"
-            class="hidden absolute right-0 mt-2 w-48 font-serif bg-white text-black border-2 border-black g z-10">
-          <a href="{% url 'home' %}" class="block px-4 py-2 hover:bg-gray-100">Home</a>
-          <a href="{% url 'timeline' %}" class="block px-4 py-2 hover:bg-gray-100">Timeline</a>
-          <a href="{% url 'mentors:mentor_list' %}" class="block px-4 py-2 hover:bg-gray-100">Mentors</a>
-          <a href="{% url 'about' %}" class="block px-4 py-2 hover:bg-gray-100">Team</a>
+            class="hidden absolute right-0 mt-2 pt-2 pb-2 w-48 font-serif bg-white text-black border-2 border-black g z-10">
+          <a href="{% url 'home' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Home</a>
+          <a href="{% url 'timeline' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Timeline</a>
+          <a href="{% url 'mentors:mentor_list' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Mentors</a>
+          <a href="{% url 'about' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Team</a>
           {% if user.is_authenticated %}
-            <a href="{% url 'account_logout' %}" class="block px-4 py-2 hover:bg-gray-100">Logout</a>
-            <a href="{% url 'account_change_password' %}" class="block px-4 py-2 hover:bg-gray-100">Change Password</a>
+            <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Logout</a>
+            <a href="{% url 'account_change_password' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Change Password</a>
           {% else %}
-            <a href="{% url 'account_login' %}" class="block px-4 py-2 hover:bg-gray-100">Login</a>
-            <a href="{% url 'account_signup' %}" class="block px-4 py-2 hover:bg-gray-100">Register</a>
+            <a href="{% url 'account_login' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Login</a>
+            <a href="{% url 'account_signup' %}" class="block px-4 py-2 text-black tracking-wider text-base hover:bg-blue-800 hover:text-white">Register</a>
           {% endif %}
         </div>
       </div>
