--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 
 <section class="flex justify-center items-center min-h-screen">
     <div class="text-center text-black">
-        <h1 class="text-5xl font-bold">Dang it! How'd we lose that...</h1>
+        <h1 class="text-5xl font-bold">Dang it! How'd we loose that...</h1>
         <h2 class="text-4xl my-4">404</h2>
         <h3 class="text-2xl mb-4">Page Not Found</h3>
         <p class="text-lg">The page you're looking for doesn't exist or has been moved.</p>
