--- a/templates/500.html
+++ b/templates/500.html
@@ -2,13 +2,21 @@
 
 {% block content %}
 
-<section class="flex justify-center items-center min-h-screen">
+  <section class="flex justify-center items-center min-h-screen">
     <div class="text-center text-black">
-        <h1 class="text-5xl font-bold">You requested a melting server?</h1>
-        <h2 class="text-4xl my-4">500</h2>
-        <h3 class="text-2xl mb-4">Internal Server Error</h3>
-        <p class="text-lg">Apologies something went wrong. Please try again later.</p>
+      <h1 class="text-5xl font-bold">
+        You requested a melting server?
+      </h1>
+      <h2 class="text-4xl my-4">
+        500
+      </h2>
+      <h3 class="text-2xl mb-4">
+        Internal Server Error
+      </h3>
+      <p class="text-lg">
+        Apologies something went wrong. Please try again later.
+      </p>
     </div>
-</section>
+  </section>
 
 {% endblock %}
