--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,33 +1,52 @@
 {% extends "account/base.html" %}
+
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}
+  {% trans "Signup" %}
+{% endblock %}
+
 
 {% block content %}
-<div class="w-full max-w-md mx-auto mt-10">
-  <div class="window">
-    <div class="title-bar">
-      <div class="title-bar-text">{% trans "Sign Up" %}</div>
-      <div class="title-bar-controls">
-        <button aria-label="Minimize"></button>
-        <button aria-label="Maximize"></button>
-        <button aria-label="Close"></button>
+  <div class="w-full max-w-md mx-auto mt-10">
+    <div class="window">
+      <div class="title-bar">
+        <div class="title-bar-text">
+          {% trans "Sign Up" %}
+        </div>
+        <div class="title-bar-controls">
+          <button aria-label="Minimize">
+          </button>
+          <button aria-label="Maximize">
+          </button>
+          <button aria-label="Close">
+          </button>
+        </div>
+      </div>
+      <div class="window-body font-mono">
+        <p class="mb-3 text-base">
+          {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+        </p>
+
+        <form class="signup text-lg"
+              id="signup_form"
+              method="post"
+              action="{% url 'account_signup' %}">
+          {% csrf_token %}
+          {{ form.as_p }}
+          {% if redirect_field_value %}
+            <input type="hidden"
+                   name="{{ redirect_field_name }}"
+                   value="{{ redirect_field_value }}" />
+          {% endif %}
+          <div class="field-row">
+            <button class="px-4 py-2 mt-2 font-mono text-lg border-2 border-black bg-white text-black tracking-widest font-bold hover:bg-blue-800 hover:text-white transition duration-300"
+                    type="submit">
+              {% trans "Sign Up" %}
+            </button>
+          </div>
+        </form>
       </div>
     </div>
-    <div class="window-body font-mono">
-      <p class="mb-3 text-base">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-      <form class="signup text-lg" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
-        {% endif %}
-        <div class="field-row">
-          <button class="px-4 py-2 mt-2 font-mono text-lg border-2 border-black bg-white text-black tracking-widest font-bold hover:bg-blue-800 hover:text-white transition duration-300" type="submit">{% trans "Sign Up" %}</button>
-        </div>
-      </form>
-    </div>
   </div>
-</div>
 {% endblock %}
