Align toggler icon center

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
         <div class="md:hidden relative z-10">
           <!-- Burger button -->
           <button id="navbar-burger"
-                  class="focus:outline-none border-2 border-black bg-white text-black"
+                  class="focus:outline-none flex justify-center border-2 border-black bg-white text-black"
                   aria-label="Open Menu">
             <svg class="w-6 h-6 text-black"
                  fill="none"
