Fix button responsiveness

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -72,13 +72,13 @@
                 <p class="mt-5 flex justify-between">
                   <a href="{{ member.github }}"
                      target="_blank"
-                     class="w-2/5 pr-3 pl-7 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
+                     class="pr-4 pl-5 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
                     GitHub
                   </a>
                   <!-- Linkedin Link -->
                   <a href=" {{ member.linkedIn }}"
                      target="_blank"
-                     class="w-2/5 pr-4 pl-5 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
+                     class="pr-4 pl-5 py-2 font-bold tracking-wider text-lg border-2 border-black bg-white text-black hover:bg-blue-800 hover:text-white transition duration-300 inline-block">
                     LinkedIn
                   </a>
                 </p>
